--- a/Start_page/onepage.css
+++ b/Start_page/onepage.css
@@ -9,13 +9,26 @@ body {
 }
 
 /* header start */
-.header {
+.topnav {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
-    padding-top: 18px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    height: 48px;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #16507b;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: flex;
+}
+
+
+.topnav .icon {
+    display: none;
 }
 
 .OnePage a {
@@ -25,20 +38,6 @@ body {
     font-family: "Poppins", sans-serif;
     color: #16507b;
     text-decoration: none;
-}
-
-.nav_bar ul {
-    list-style-type: none;
-    display: flex;
-    gap: 28px;
-}
-
-.nav_bar a {
-    text-decoration: none;
-}
-
-.nav_bar li:hover {
-    color: #2487ce;
 }
 
 .start_btn {
@@ -62,8 +61,14 @@ body {
 }
 
 .dropdown {
+
     position: relative;
     display: inline-block;
+}
+
+.fa-chevron-down {
+    margin-left: 5px;
+    font-size: 16px;
 }
 
 
@@ -77,7 +82,7 @@ body {
 }
 
 
-.dropdown-content a {
+.dropdown-content p {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -138,18 +143,18 @@ body {
 }
 
 
-.card_page i{
+.card_page i {
     font-size: 34px;
     line-height: 2;
     color: #2487ce;
 }
 
-.card_page h4{
+.card_page h4 {
     line-height: 2;
     color: #2487ce;
 }
 
-.card_page p{
+.card_page p {
     font-size: 15px;
     line-height: 28px;
     margin-bottom: 0;
@@ -181,31 +186,175 @@ body {
 
 /* card page start */
 
+/* about page start */
+.about_page_start {
+    margin-top: 10px;
+}
 
+.about_page h2 {
+    text-align: center;
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    padding-bottom: 0;
+    color: #124265;
+}
+
+.about_page p {
+    text-align: center;
+    margin-bottom: 0;
+    font-size: 14px;
+    color: #919191;
+
+}
+
+.about_content {
+    margin-top: 20px;
+    display: flex;
+    padding: 0% 4%;
+    gap: 5%;
+}
+
+.about_one {
+    color: #413535;
+    line-height: 23px;
+    width: 31%;
+    margin-left: 15%;
+}
+
+.about_one ul {
+    margin-top: 5px;
+    color: #413535;
+    list-style-type: none;
+    line-height: 27px;
+}
+
+.fa-check {
+    font-size: 20px;
+    color: #2487ce;
+}
+
+.about_two {
+    color: #413535;
+    line-height: 28px;
+    width: 37%;
+}
+
+.learn_more {
+    font-family: "Raleway", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 12px 32px;
+    border-radius: 5px;
+    line-height: 1;
+    color: #2487ce;
+    margin-top: 6px;
+    border: 2px solid #2487ce;
+}
+
+.learn_more :hover{
+   background-color: #2487ce;
+   color: #FFFFFF;
+}
+/* about page end */
+
+/* GotoTop Start */
+.myBtn {
+    position: fixed;
+    bottom: 13px;
+    right: 30px;
+    font-size: 17px;
+    border: none;
+    outline: none;
+    background-color: #2F88CB;
+    color: white;
+    cursor: pointer;
+    padding: 14px;
+    border-radius: 7px;
+}
+
+.myBtn:hover {
+    background-color: rgb(51, 45, 70);
+}
+/* GotoTop end */
 /* media scren start */
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
+
 @media only screen and (min-width:320px) and (max-width: 750px) {
-    .nav_bar ul {
-        display: flex;
-        flex-direction: column;
+    .home_page {
+        height: 0%;
     }
-    .header {
-        height: 58vh;
-        width: 140%;
-    }
+
     .home_page h1 {
-        font-size: 38px;
+        font-size: 27px;
     }
+
     .home_page h2 {
-        font-size: 38px;
+        font-size: 22px;
     }
-    .content_page{
+
+    .content_page {
         padding: 5%;
     }
-    .card_page{
+
+    .card_page {
         display: flex;
         flex-direction: column;
-    } 
+        margin-left: 4px;
+    }
 
+    .about_page_start {
+        margin-top: 159%;
+    }
+
+    .about_page h2 {
+        font-size: 15px;
+    }
+
+    .about_page p {
+        font-size: 17px;
+    }
+
+    .about_one {
+        width: 78%;
+    }
+
+    .about_two {
+        width: 100%;
+    }
+
+    .about_content {
+        display: inline-grid;
+    }
 }
 
 /* media scren end */
